# Astronperiklos

./: CMakeCache.txt  CMakeLists.txt  Makefile  REAMDE.md  kernel.elf  link.ld  os.img
include/: iopl.hpp  irq.hpp  kstd.hpp  non_acpi.hpp
lib/: memory.cc  memory.hpp
src/: kernel.cc  main.asm
